# HertzAndHearts

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Cardiac_Vagal Signals_ LF and HF.docx  Create-Desktop-Shortcut.bat  Create-Desktop-Shortcut.ps1  Hertz-and-Hearts.spec  README.md  Run-HnH.bat  TEST_SPEC.md  WISHLIST.md  changelog.md  edited-Cardiac_Vagal Signals_ LF and HF.docx  export_cursor_thread.py  installer.iss  journal-Cardiac_Vagal Signals_ LF and HF.docx  profiles.db  pyproject.toml  submission-ready-Cardiac_Vagal Signals_ LF and HF.docx
.github/: FUNDING.yml
Android Bridge App/: Android Dev Workflow.txt  CHANGELOG.md
docs/: BETA_ANNOUNCEMENT.md  BETA_TESTER_INSTRUCTIONS.md  BLE_PLATFORM_VALIDATION_MATRIX.md  BUILD_KIOSK_ISO.md  F06_TRENDS_COMPARE_TAB_DESIGN.md  Gemini-Bluetooth Adapter Recommendations.docx  IBI_LIVE_STREAM_TEST_PROCEDURE.md  KIOSK_STORAGE_LAYOUT.md  KIOSK_USB_PLAN.md  PACKAGING.md  PHONE_BRIDGE_QUICKSTART.md  PUBLIC_RELEASE_CHECKLIST.md  SCREENSHOT_AND_REPORT_ASSETS.md  USER_GUIDE.md  avatar.jpg.old  cardiac-compendium.md  cardiac_md_export.py  compile_resources.sh  conversation_export.md  dev-mode-guide.html  part-i-qrs-waveform-fundamentals.md  part-ii-hrv-autonomic-metrics.md  password_and_lockout.md  resources.qrc  troubleshooting.md
hnh/: __init__.py  app.py  ble_diagnostics.py  config.py  data_paths.py  disclaimer.md  edf_export.py  import_session.py  linux_ble_prep.py  logger.py  model.py  pacer.py  perf_probe.py  profile_store.py  qtc.py  replay_loader.py  report.py  resources.py  sensor.py  session_artifacts.py  (+6 more)
(+187 files in other folders)
