[project]
name = "VNS-TA"
version = "0.0.1-beta"
# Support all Python versions that are compatible with the PySide6 version.
# See compatibility matrix at https://wiki.qt.io/Qt_for_Python.
requires-python = ">= 3.9"
dependencies = ["PySide6 >= 6.10", "python-docx >= 1.1", "numpy", "hrvanalysis", "pyqtgraph"]

[project.optional-dependencies]
dev = ["snakeviz"]
build = ["pyinstaller"]

[tool.mypy]
check_untyped_defs = true

[project.gui-scripts]
# command line entry points
vns-ta = "vns_ta.app:main"
