[project]
name = "Hertz-and-Hearts"
version = "0.1.0"
# Support all Python versions that are compatible with the PySide6 version.
# See compatibility matrix at https://wiki.qt.io/Qt_for_Python.
requires-python = ">= 3.9"
dependencies = ["PySide6 >= 6.10", "python-docx >= 1.1", "numpy", "pandas>=2.2,<3", "hrv-analysis", "pyqtgraph", "neurokit2"]

[project.optional-dependencies]
dev = ["snakeviz"]
build = ["pyinstaller"]

[tool.setuptools.packages.find]
include = ["hnh*"]

[tool.setuptools.package-data]
hnh = ["disclaimer.md"]

[tool.mypy]
check_untyped_defs = true

[project.gui-scripts]
hnh = "hnh.app:main"
